New experiment results

--- a/src/salicae/runs/salicae-experiments.ipynb
+++ b/src/salicae/runs/salicae-experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,16 +45,16 @@
    "source": [
     "# Gaussian Blurs\n",
     "\n",
-    "## Blurred single frame"
+    "## Gaussian single frame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def vfblur(i, std, tr):\n",
+    "def vfblur_g(i, std, tr):\n",
     "    orig = dset[i]\n",
     "    blurred = filters.gaussian_filter(dset[i], (std, std, 0.0), truncate=tr)\n",
     "    plt.figure(figsize=(18, 8))\n",
@@ -63,13 +63,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6febffcb0abe46d6bf174fa8a36cf7da",
+       "model_id": "2494af908fde45eb888c4eec45c5ad1f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,7 +82,7 @@
     }
    ],
    "source": [
-    "interact(vfblur,\n",
+    "interact(vfblur_g,\n",
     "         i=widgets.BoundedIntText(value=8, min=0, max=599, step=1, description='frame ID: '),\n",
     "         std=widgets.FloatSlider(value=1.5, min=0.0, max=10.0, step=0.5, continuous_update=False),\n",
     "         tr=widgets.FloatSlider(value=4.0, min=0.0, max=20.0, step=1.0, continuous_update=False));"
@@ -92,6 +92,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Uniform single frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vfblur_u(i, w):\n",
+    "    orig = dset[i]\n",
+    "    blurred = filters.median_filter(dset[i], (w, w, 1))\n",
+    "    plt.figure(figsize=(18, 8))\n",
+    "    plt.imshow(blurred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8d67ee61d1a04ed78dc925254bc5a1fa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "aW50ZXJhY3RpdmUoY2hpbGRyZW49KEJvdW5kZWRJbnRUZXh0KHZhbHVlPTgsIGRlc2NyaXB0aW9uPXUnZnJhbWUgSUQ6ICcsIG1heD01OTkpLCBJbnRTbGlkZXIodmFsdWU9MSwgY29udGludW/igKY=\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "interact(vfblur_u,\n",
+    "         i=widgets.BoundedIntText(value=8, min=0, max=599, step=1, description='frame ID: '),\n",
+    "         w=widgets.IntSlider(value=1, min=1, max=30, step=1, continuous_update=False));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Median of Blur\n",
+    "\n",
     "## Median of Gaussian"
    ]
   },
@@ -145,6 +193,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Median of Uniform"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vfmou(i, w, width, center_aligned):\n",
+    "    if center_aligned:\n",
+    "        window = [dset[j] for j in range(max(0, i-width//2), i+width//2)]\n",
+    "    else:\n",
+    "        window = [dset[j] for j in range(max(0, i-width), i)]\n",
+    "    blurred_frames = [filters.uniform_filter(x, (w, w, 1))\n",
+    "                      for x in window]\n",
+    "    median_blurred = np.round(np.median(np.stack(blurred_frames), axis=0)).astype(np.uint8)\n",
+    "    plt.figure(figsize=(18, 8))\n",
+    "    plt.imshow(median_blurred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "68941c7ac40646088c684f6504ac073c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "aW50ZXJhY3RpdmUoY2hpbGRyZW49KEJvdW5kZWRJbnRUZXh0KHZhbHVlPTgsIGRlc2NyaXB0aW9uPXUnZnJhbWUgSUQ6ICcsIG1heD01OTksIG1pbj0xKSwgSW50U2xpZGVyKHZhbHVlPTEsIGTigKY=\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "interact(vfmou,\n",
+    "         i=widgets.BoundedIntText(value=8, min=1, max=599, step=1, description='frame ID: '),\n",
+    "         w=widgets.IntSlider(value=1, min=1, max=30, step=1, description='width: '),\n",
+    "         width=widgets.BoundedIntText(value=30, min=5, max=60, step=1, description='window: '),\n",
+    "         center_aligned=widgets.Checkbox(value=True, description='Center aligned window'));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mean of Blur\n",
+    "\n",
     "## Mean of Gaussian"
    ]
   },
