--- a/experiments/experiments.ipynb
+++ b/experiments/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,8 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
+    "import torch.utils.data\n",
+    "import torchvision.models\n",
     "from torchvision.models import resnet101, vgg11, vgg13\n",
     "import torchvision.transforms as trans\n",
     "import numpy as np\n",
@@ -42,6 +44,7 @@
     "import vmdata\n",
     "import more_trans\n",
     "\n",
+    "%load_ext memory_profiler\n",
     "%matplotlib inline"
    ]
   },
@@ -54,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,12 +1160,124 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Pretrained conv as preprocessing\n",
+    "\n",
+    "The code in this section do **NOT** need the `vdset` loaded at the beginning of this notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ezfirstae.loaddata as ld\n",
+    "import ezfirstae.models.incpv3_pred9_f1to8 as incpv3_pred9_f1to8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "any(map(lambda x: x.requires_grad, incpv3_pred9_f1to8.PreFeatures().parameters()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = vmdata.prepare_dataset_root(9, (8, 0, 0))\n",
+    "normalize = trans.Normalize(*vmdata.get_normalization_stats(root, bw=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 7477.30 MiB, increment: 4845.30 MiB\n",
+      "CPU times: user 19.7 s, sys: 5.06 s, total: 24.7 s\n",
+      "Wall time: 21.6 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "%%memit\n",
+    "encoder = incpv3_pred9_f1to8.STCAEEncoder()\n",
+    "decoder = incpv3_pred9_f1to8.STCAEDecoder()\n",
+    "attention = incpv3_pred9_f1to8.STCAEDecoderAttn()\n",
+    "transform = ld.PreProcTransform(normalize, downsample_scale=3, pool_scale=8, to_rgb=True)\n",
+    "with vmdata.VideoDataset(root, transform=transform) as vdset:\n",
+    "    swsam = ld.SlidingWindowBatchSampler(range(len(vdset)), 8, batch_size=8)\n",
+    "    dataloader = torch.utils.data.DataLoader(vdset, batch_sampler=swsam)\n",
+    "    for inputs in dataloader:\n",
+    "        inputs = ld.rearrange_temporal_batch(inputs, 8)\n",
+    "        codes = encoder(inputs)\n",
+    "        predictions = decoder(codes)\n",
+    "        attns = attention(codes)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inputs.size: torch.Size([8, 3, 8, 160, 232])\n",
+      "codes.size: torch.Size([8, 128, 1, 9, 14])\n",
+      "predictions.size: torch.Size([8, 64, 1, 144, 224])\n",
+      "attns.size: torch.Size([8, 1, 1, 144, 224])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('inputs.size:', inputs.size())\n",
+    "print('codes.size:', codes.size())\n",
+    "print('predictions.size:', predictions.size())\n",
+    "print('attns.size:', attns.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Remember to call this method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1186,7 +1301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.5.2"
   },
   "toc": {
    "base_numbering": 1,
