New optical flow experiments (multiscale)

--- a/experiments/experiments-cv2flow.ipynb
+++ b/experiments/experiments-cv2flow.ipynb
@@ -2,23 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'ezfirstae'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-07e269301d5e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmore_sampler\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mezfirstae\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloaddata\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSlidingWindowBatchSampler\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'matplotlib'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ezfirstae'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from collections import namedtuple, deque\n",
+    "import os\n",
+    "\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "import cv2\n",
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
@@ -27,6 +19,8 @@
     "import vmdata\n",
     "import more_trans\n",
     "import more_sampler\n",
+    "import exprlib\n",
+    "import utils\n",
     "\n",
     "from ezfirstae.loaddata import SlidingWindowBatchSampler\n",
     "\n",
@@ -37,33 +31,154 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'more_sampler' has no attribute 'SlidingWindowBatchSampler'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-0b216c71b769>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtransform\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrans\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCompose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtrans\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mToTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmore_trans\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mRGB2Gray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnormalize\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mvmdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mVideoDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mvdset\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0msam\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmore_sampler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSlidingWindowBatchSampler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'more_sampler' has no attribute 'SlidingWindowBatchSampler'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "root = vmdata.prepare_dataset_root(9, (8, 0, 0))\n",
-    "normalize = trans.Normalize(*vmdata.get_normalization_stats(root, bw=True))\n",
-    "transform = trans.Compose([trans.ToTensor(), more_trans.RGB2Gray(), normalize])\n",
-    "with vmdata.VideoDataset(root, transform=transform) as vdset:\n",
-    "    sam = more_sampler.SlidingWindowBatchSampler()"
+    "feature_params = {\n",
+    "    'blockSize': 7,\n",
+    "    'maxCorners': 100,\n",
+    "    'minDistance': 7,\n",
+    "    'qualityLevel': 0.3,\n",
+    "    'mask': None,\n",
+    "}\n",
+    "lk_params = {\n",
+    "    'criteria': (cv2.TERM_CRITERIA_EPS | cv2.TERM_CRITERIA_COUNT, 10, 0.03),\n",
+    "}\n",
+    "prmy_params = {\n",
+    "    'winSize': (15, 15),\n",
+    "    'maxLevel': 8,\n",
+    "}\n",
+    "fb_params = (\n",
+    "    0.5,\n",
+    "    1,\n",
+    "    15,\n",
+    "    3,\n",
+    "    5,\n",
+    "    1.2,\n",
+    "    0,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "root = vmdata.prepare_dataset_root(9, (8, 0, 0))\n",
+    "#normalize = trans.Normalize(*vmdata.get_normalization_stats(root, bw=True))\n",
+    "\n",
+    "basedir = 'data.experiments-cv2flow/multiscale'\n",
+    "os.makedirs(basedir, exist_ok=True)\n",
+    "\n",
+    "\n",
+    "class MultiscaleFlowLauncher(exprlib.ExperimentLauncher):\n",
+    "    def __init__(self):\n",
+    "        super().__init__(basedir, prefix='flow_', suffix='.npz',\n",
+    "                         translate_kwargs={\n",
+    "                             'root': str,\n",
+    "                             'indices': list,\n",
+    "                             'prmy_params': dict,\n",
+    "                             'fb_params': list,\n",
+    "                         })\n",
+    "    def load_result(self, filename):\n",
+    "        data = np.load(filename)\n",
+    "        flows = [data[str(j)] for j in range(len(data.keys()))]\n",
+    "        del data\n",
+    "        return flows,\n",
+    "    \n",
+    "    def store_result(self, filename, *args):\n",
+    "        scales_flows, = args\n",
+    "        scales_flows = dict((str(j), f) for j, f in enumerate(scales_flows))\n",
+    "        np.savez(filename, **scales_flows)\n",
+    "    \n",
+    "    def run(self, **kwargs):\n",
+    "        root = kwargs['root']\n",
+    "        indices = kwargs['indices']\n",
+    "        prmy_params = kwargs['prmy_params']\n",
+    "        fb_params = kwargs['fb_params']\n",
+    "        \n",
+    "        flows = []\n",
+    "        window = deque(maxlen=2)\n",
+    "        with vmdata.VideoDataset(root) as vdset:\n",
+    "            for j in indices:\n",
+    "                im = vdset[j]\n",
+    "                im = cv2.cvtColor(im, cv2.COLOR_RGB2GRAY)\n",
+    "                pr = cv2.buildOpticalFlowPyramid(im, **prmy_params)[1][::2]\n",
+    "                pr = iter(l[..., np.newaxis] for l in pr)\n",
+    "                window.append(pr)\n",
+    "                \n",
+    "                if len(window) < 2:\n",
+    "                    continue\n",
+    "                \n",
+    "                for k, (i1, i2) in enumerate(zip(*window)):\n",
+    "                    f = cv2.calcOpticalFlowFarneback(i1, i2, None, *fb_params)\n",
+    "                    while k >= len(flows):\n",
+    "                        flows.append([])\n",
+    "                    flows[k].append(f)\n",
+    "        flows = list(map(np.stack, flows))\n",
+    "        return flows,\n",
+    "\n",
+    "\n",
+    "def visualize_flows(flows, filename, title='', fps=3):\n",
+    "    \"\"\"\n",
+    "    Visualize flows in HSV.\n",
+    "    \n",
+    "    :param flows: flow data of shape (N, H, W)\n",
+    "    :param filename: video file to write to\n",
+    "    \"\"\"\n",
+    "    if not flows.shape[0]:\n",
+    "        return\n",
+    "    hw = flows[0].shape[:2]\n",
+    "    wh = tuple(hw[::-1])\n",
+    "    fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
+    "    if not title:\n",
+    "        title = 'flow'\n",
+    "    \n",
+    "    hsv = np.zeros(flows[0].shape[:2] + (3,), dtype=np.uint8)\n",
+    "    hsv[..., 1] = 255\n",
+    "    with utils.videowritercontext(filename, fourcc, fps, wh) as outfile:\n",
+    "        for f in flows:\n",
+    "            mag, ang = cv2.cartToPolar(f[..., 0], f[..., 1])\n",
+    "            hsv[..., 0] = ang * 180 / np.pi / 2\n",
+    "            hsv[..., 2] = cv2.normalize(mag, None, 0, 255, cv2.NORM_MINMAX)\n",
+    "            rgb = cv2.cvtColor(hsv, cv2.COLOR_HSV2RGB)\n",
+    "            outfile.write(rgb)\n",
+    "\n",
+    "def visualize_flows_all_scales(flows_scales, basefilename, fps=3):\n",
+    "    for s, flows in enumerate(flows_scales):\n",
+    "        filename = basefilename + '.sc{}.avi'.format(s)\n",
+    "        visualize_flows(flows, filename, title='flow_scale{}'.format(s), fps=fps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "launcher = MultiscaleFlowLauncher()\n",
+    "flows, = launcher(root=root, indices=range(1000),\n",
+    "                  prmy_params=prmy_params, fb_params=fb_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualize_flows_all_scales(flows, launcher.result_filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conclusion:\n",
+    "Gunnar Farneback dense optical flow produces worse quality under individual scale than in a pyramid of scales.\n",
+    "When the scale is small, dolphin is polluted by water movements.\n",
+    "When the scale is large, dolphin, when far from camera, is not captured."
+   ]
   }
  ],
  "metadata": {
@@ -82,7 +197,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
