New flow expleriments visualized by vector field

--- a/experiments/experiments-cv2flow.ipynb
+++ b/experiments/experiments-cv2flow.ipynb
@@ -2,14 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import namedtuple, deque\n",
+    "from types import SimpleNamespace\n",
+    "from contextlib import contextmanager\n",
+    "import itertools\n",
     "import os\n",
     "\n",
+    "from tqdm import tqdm\n",
     "import numpy as np\n",
+    "import scipy as sp\n",
+    "import scipy.signal as signal\n",
+    "import scipy.misc\n",
     "import matplotlib.pyplot as plt\n",
     "import cv2\n",
     "import torch\n",
@@ -22,9 +29,18 @@
     "import exprlib\n",
     "import utils\n",
     "\n",
-    "from ezfirstae.loaddata import SlidingWindowBatchSampler\n",
+    "from more_sampler import SlidingWindowBatchSampler\n",
     "\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pdb"
    ]
   },
   {
@@ -60,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +120,7 @@
     "                im = vdset[j]\n",
     "                im = cv2.cvtColor(im, cv2.COLOR_RGB2GRAY)\n",
     "                pr = cv2.buildOpticalFlowPyramid(im, **prmy_params)[1][::2]\n",
-    "                pr = iter(l[..., np.newaxis] for l in pr)\n",
+    "                pr = [l[..., np.newaxis] for l in pr]\n",
     "                window.append(pr)\n",
     "                \n",
     "                if len(window) < 2:\n",
@@ -116,10 +132,133 @@
     "                        flows.append([])\n",
     "                    flows[k].append(f)\n",
     "        flows = list(map(np.stack, flows))\n",
-    "        return flows,\n",
+    "        return flows,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def time_averaged(flows, width=3):\n",
+    "    \"\"\"\n",
+    "    :param flows: of shape (N, H, W, 2)\n",
+    "    :param window: the sliding window width along the first axis of ``flows``\n",
+    "    \"\"\"\n",
+    "    kernel = np.ones((width, 1))\n",
+    "    sh = flows.shape\n",
+    "    flows = flows.reshape((flows.shape[0], -1))\n",
+    "    flows = signal.convolve2d(flows, kernel, mode='valid')\n",
+    "    flows = flows.reshape((-1, *sh[1:]))\n",
+    "    return flows\n",
+    "\n",
+    "def downsampled(flow, scale=0.5):\n",
+    "    flow = scipy.misc.imresize(flow, size=scale)\n",
+    "    return flow\n",
     "\n",
     "\n",
-    "def visualize_flows(flows, filename, title='', fps=3):\n",
+    "def draw_vector_field(flow, figsize, scale=0.5, bw=False):\n",
+    "    fl = np.stack((downsampled(flow[..., 0], scale=scale),\n",
+    "                   downsampled(flow[..., 1], scale=scale)), axis=2)\n",
+    "    fig, ax = plt.subplots(figsize=figsize)\n",
+    "    with exprlib.fig_as_data(plt, fig, ax) as ns:\n",
+    "        ax.quiver(np.arange(fl.shape[1]),\n",
+    "                  np.arange(fl.shape[0])[::-1],\n",
+    "                  fl[..., 0], fl[..., 1])\n",
+    "    data = ns.data\n",
+    "    if bw:\n",
+    "        data = cv2.cvtColor(data, cv2.COLOR_RGB2GRAY)\n",
+    "    return data\n",
+    "\n",
+    "def crop_white_border(img):\n",
+    "    \"\"\"\n",
+    "    Crop white border from B&W image of shape (H, W).\n",
+    "    \"\"\"\n",
+    "    img = np.max(img, axis=2)\n",
+    "    rpixels = np.nonzero(np.min(img, axis=0) < 255)[0]\n",
+    "    rmin, rmax = np.min(rpixels), np.max(rpixels)\n",
+    "    cpixels = np.nonzero(np.min(img, axis=1) < 255)[0]\n",
+    "    cmin, cmax = np.min(cpixels), np.max(cpixels)\n",
+    "    img = img[cmin:1+cmax,rmin:1+rmax]\n",
+    "    return img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize_flows(flows, filename, vdset_indices=None, title='', fps=3):\n",
+    "    \"\"\"\n",
+    "    Visualize flows in arrows.\n",
+    "    \n",
+    "    :param flows: flow data of shape (N, H, W, 2)\n",
+    "    :param filename: video file to write to\n",
+    "    :param vdset_indices: tuple of (vdset, indices) used in\n",
+    "           MultiscaleFlowLauncher; if provided, put the original frame\n",
+    "           on the left of the flow visualization\n",
+    "    \"\"\"\n",
+    "    def _visualize_flow_once(vdset, fid, fl):\n",
+    "        datas = draw_vector_field(fl, (9, 4), scale=0.2, bw=True)\n",
+    "        datal = draw_vector_field(fl, (9, 4), scale=0.05, bw=True)\n",
+    "\n",
+    "        #datas = crop_white_border(datas)\n",
+    "        #datal = crop_white_border(datal)\n",
+    "\n",
+    "        canvas = np.zeros((datas.shape[0] + 2 + datal.shape[0],\n",
+    "                           np.max([datas.shape[1], datal.shape[1]]))).astype(np.uint8)\n",
+    "        canvas[:datas.shape[0],:datas.shape[1]] = datas\n",
+    "        canvas[-datal.shape[0]:,:datal.shape[1]] = datal\n",
+    "\n",
+    "        if fid is not None:\n",
+    "            origf = cv2.cvtColor(vdset[fid], cv2.COLOR_RGB2GRAY)\n",
+    "            aug_canvas = np.zeros((max(origf.shape[0], canvas.shape[0]),\n",
+    "                                   origf.shape[1] + canvas.shape[1])).astype(np.uint8)\n",
+    "            aug_canvas[:origf.shape[0], :origf.shape[1]] = origf\n",
+    "            aug_canvas[:canvas.shape[0], -canvas.shape[1]:] = canvas\n",
+    "            canvas = aug_canvas\n",
+    "        \n",
+    "        canvas = canvas.astype(np.uint8)\n",
+    "        return canvas\n",
+    "    \n",
+    "    \n",
+    "    if not flows.shape[0]:\n",
+    "        return\n",
+    "    \n",
+    "    flows = time_averaged(flows, width=3)\n",
+    "    \n",
+    "    try:\n",
+    "        vdset, indices = vdset_indices\n",
+    "    except TypeError:\n",
+    "        vdset = None\n",
+    "    else:\n",
+    "        indices = indices[1:-2]\n",
+    "        assert len(indices) == flows.shape[0], '{} != {}'.format(len(indices), flows.shape[0])\n",
+    "    \n",
+    "    wh = tuple(_visualize_flow_once(vdset, 1, flows[0]).shape[:2][::-1])\n",
+    "    fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
+    "    if not title:\n",
+    "        title = 'flow'\n",
+    "        \n",
+    "    with utils.videowritercontext(filename, fourcc, fps, wh) as outfile:\n",
+    "        flows_it = zip(indices, flows) if vdset_indices \\\n",
+    "                   else zip(itertools.repeat(None), flows)\n",
+    "        for fid, fl in tqdm(flows_it, total=flows.shape[0], ascii=True):\n",
+    "            sh = fl.shape[:2]\n",
+    "            canvas = _visualize_flow_once(vdset, fid, fl)\n",
+    "            canvas = np.repeat(canvas[...,np.newaxis], 3, axis=2)\n",
+    "            outfile.write(canvas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize_flows_hsv(flows, filename, title='', fps=3):\n",
     "    \"\"\"\n",
     "    Visualize flows in HSV.\n",
     "    \n",
@@ -137,28 +276,48 @@
     "    hsv = np.zeros(flows[0].shape[:2] + (3,), dtype=np.uint8)\n",
     "    hsv[..., 1] = 255\n",
     "    with utils.videowritercontext(filename, fourcc, fps, wh) as outfile:\n",
-    "        for f in flows:\n",
+    "        for f in tqdm(flows, total=flows.shape[0], ascii=True):\n",
     "            mag, ang = cv2.cartToPolar(f[..., 0], f[..., 1])\n",
     "            hsv[..., 0] = ang * 180 / np.pi / 2\n",
     "            hsv[..., 2] = cv2.normalize(mag, None, 0, 255, cv2.NORM_MINMAX)\n",
     "            rgb = cv2.cvtColor(hsv, cv2.COLOR_HSV2RGB)\n",
-    "            outfile.write(rgb)\n",
-    "\n",
-    "def visualize_flows_all_scales(flows_scales, basefilename, fps=3):\n",
-    "    for s, flows in enumerate(flows_scales):\n",
-    "        filename = basefilename + '.sc{}.avi'.format(s)\n",
-    "        visualize_flows(flows, filename, title='flow_scale{}'.format(s), fps=fps)"
+    "            outfile.write(rgb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize_flows_all_scales(vmethod, flows_scales, basefilename, fps=3, **kwargs):\n",
+    "    for s, flows in tqdm(enumerate(flows_scales), total=len(flows_scales), ascii=True):\n",
+    "        filename = basefilename + '.sc{}.avi'.format(s)\n",
+    "        tqdm.write('Beginning {} at scale {}'.format(vmethod.__name__, s))\n",
+    "        vmethod(flows, filename, title='flow_scale{}'.format(s), fps=fps, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "launcher = MultiscaleFlowLauncher()\n",
-    "flows, = launcher(root=root, indices=range(1000),\n",
+    "indices = range(1000)\n",
+    "flows, = launcher(root=root, indices=indices,\n",
     "                  prmy_params=prmy_params, fb_params=fb_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with vmdata.VideoDataset(root) as vdset:\n",
+    "    visualize_flows_all_scales(visualize_flows, flows, launcher.result_filename,\n",
+    "                               vdset_indices=(vdset, indices))"
    ]
   },
   {
@@ -167,7 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualize_flows_all_scales(flows, launcher.result_filename)"
+    "#visualize_flows_all_scales(flows, launcher.result_filename)"
    ]
   },
   {
